Fixed small styles issues & body.overflow

--- a/src/components/Calendar/Calendar.module.css
+++ b/src/components/Calendar/Calendar.module.css
@@ -11,7 +11,7 @@
 
 .calendar input {
     cursor: pointer;
-    width: 100%;
+    width: 280px;
     border: none;
     padding-left: 12px;
     background: transparent;
@@ -27,13 +27,31 @@
     top: -1px;
     left: 248px;
     display: block;
-    margin-bottom: 5px;
     position: absolute;
     z-index: -1;
 }
 
-@media screen and (min-width: 767px) {
+.calendar div {
+    margin-top: 7px;
+    background-color: rgba(243, 243, 243, 0.93);
+    border-radius: 20px;
+    /* box-shadow: 0px 6px 15px 0px rgba(0, 0, 0, 0.1); */
+}
+
+.calendar table {
+    background: transparent;
+}
+
+.calendar .rdtPicker .rdtDay {
+    color: white;
+}
+
+@media screen and (min-width: 768px) {
     .calendar::after {
         left: 143px;
+    }
+
+    .calendar input {
+        width: 100%;
     }
 }
